--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,13 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:13
+    image: postgres:17
     environment:
       POSTGRES_DB: barter_db
       POSTGRES_USER: barter_user
       POSTGRES_PASSWORD: barter_password
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -19,6 +21,12 @@ services:
     build: .
     environment:
       DATABASE_URL: postgres://barter_user:barter_password@db:5432/barter_db
+    command: >
+      bash -c "
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8000
+      "
+
     depends_on:
       db:
         condition: service_healthy
