--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.9
 whitenoise==6.6.0
 Pillow==10.3.0
-django-allauth
+django-allauth==65.8.1
+django-crispy-forms
+crispy_bootstrap5
