--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:17
     env_file:
-      - .env  # Подключаем файл с переменными
+      - .env.prod  # Подключаем файл с переменными
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -25,7 +25,7 @@ services:
       DATABASE_URL: ${DATABASE_URL}
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     env_file:
-      - .env
+      - .env.prod
     depends_on:
       db:
         condition: service_healthy
